--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: ShxDowXD # the main title
 
-tagline: Game Developer | Music composer A home for my Github projects 
+tagline: Game Developer | Music composer A home for my Github projects!
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
