--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://ShxDowXD.github.io"
 
 github:
   username: ShxDowXD # change to your GitHub username
@@ -36,7 +36,7 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  # name: your_full_name
+   name: ShxDowXD
   # email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
