--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+# 1
 
 # The Site Configuration
 # Test
@@ -24,10 +25,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
- #url: "https://ShxDowXD.github.io"
+url: ""
 
 github:
-#  username: ShxDowXD # change to your GitHub username
+  username: ShxDowXD # change to your GitHub username
 
 # twitter:
   # username: twitter_username # change to your Twitter username
@@ -35,7 +36,7 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-   name: ShxDowXD
+  # name: your_full_name
   # email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
